[gd_scene load_steps=2 format=3 uid="uid://drdmutd2scbyb"]

[ext_resource type="Script" path="res://Scripts/DeckBuilderScripts/PopUpLoad.gd" id="1_set8a"]

[node name="popupWindow" type="Window"]
position = Vector2i(0, 36)
size = Vector2i(400, 300)
script = ExtResource("1_set8a")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LineEdit" type="LineEdit" parent="MarginContainer"]
layout_mode = 2
placeholder_text = "Enter filename to save"
expand_to_text_length = true
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3

[node name="cancel_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="done_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="HBoxContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/done_button" to="." method="_on_done_button_pressed"]
